# render

./: CMakeLists.txt  README.md  test.sh
src/: camera.cpp  camera.hpp  color.hpp  configuration.hpp  face.hpp  fragment.hpp  light.hpp  main.cpp  matrix.hpp  mesh.hpp  testing.hpp  vector.hpp
